--- a/csapp/L3/ASS/makefile
+++ b/csapp/L3/ASS/makefile
@@ -6,7 +6,7 @@ EXE = program
 SRC = ./src
 
 CODE = ./src/memory/instruction.c ./src/disk/code.c  
-CODE += ./src/memory/dram.c	./src/main.c		
+CODE += ./src/memory/dram.c	./src/cpu/mmu.c ./src/main.c 	
 
 
 .PHONY: program
